--- a/package.json
+++ b/package.json
@@ -21,10 +21,15 @@
   },
   "dependencies": {
     "@apollo/server": "^4.10.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
+    "bcrypt": "^5.1.1",
+    "bcrypt-ts": "^5.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.1",
     "nodemon": "^3.0.3"
   }
