--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon dist/index.js",
+    "start": "nodemon dist/index.ts",
     "build": "npx tsc",
     "dev": "tsnd --respawn --clear src/index.ts"
   },
@@ -22,11 +22,12 @@
   "dependencies": {
     "@apollo/server": "^4.10.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/dotenv": "^8.2.0",
     "@types/jsonwebtoken": "^9.0.6",
     "bcrypt": "^5.1.1",
     "bcrypt-ts": "^5.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.4",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.2",
